methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:11: error: not found: value ctn
        ctn = false
        ^